--- a/package.json
+++ b/package.json
@@ -1,7 +1,26 @@
 {
-  "dependencies": {
-    "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
-    "nodemailer": "^6.7.7"
-  }
+	"dependencies": {
+		"axios": "^0.27.2",
+		"dotenv": "^16.0.1",
+		"nodemailer": "^6.7.7"
+	},
+	"name": "shadowban_check",
+	"description": "",
+	"version": "1.0.0",
+	"main": "index.js",
+	"devDependencies": {},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/johnkirtley/shadowban_check.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/johnkirtley/shadowban_check/issues"
+	},
+	"homepage": "https://github.com/johnkirtley/shadowban_check#readme"
 }
